# delivery-service

./: package-lock.json  package.json  truffle-config.js  website.code-workspace
.github/: readme.md
careers/: Cargo.toml  Dockerfile  Makefile  README.md
careers/backend/: Cargo.toml  README.md
careers/frontend/src/assets/css/: noto-sans.css
careers/frontend/src/pages/: App.tsx
careers/src/: main.rs  state.rs
careers/src/modules/: mod.rs
careers/src/modules/jobs/: controller.rs  entity.rs  mod.rs  service.rs
careers/src/modules/jobs/dto/: create.rs  mod.rs
contracts/: Packages.sol
frontend/: Dockerfile  Makefile  README.md  package.json
frontend/src/: main.tsx  router.tsx
hardhat/: package.json
hardhat/contracts/: Packages.sol
migrations/: 1_deploy_contracts.js
react/: package-lock.json  package.json  tailwind.config.cjs
react-src/: index.html  package-lock.json  package.json  vite.config.js
react-src/src/: App.jsx  TodoList.json
react/src/: App.tsx  Header.tsx  Hero.tsx  i18n.ts  main.tsx
telegram-bot/: package-lock.json  package.json  readme.md
telegram-bot/src/: app.ts
tracking/: Makefile  README.md  hardhat.config.ts  package-lock.json  package.json
tracking/contracts/: Packages.sol
tracking/frontend/: README.md  tsconfig.json  vite.config.ts
tracking/scripts/: deploy.ts
tracking/test/: Packages.ts
website/: .dockerignore  .gitignore  README.md  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  wagmi.config.ts
website/@types/: i18n.d.ts
website/src/: Placemarks.ts  generated.ts  (+5 more)
(+105 files in other folders)
