[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.3.0"
actix-cors = "0.6.4"
actix-utils = "3.0.1"
sqlx = { version = "0.6.2", features = [ "runtime-actix-native-tls", "postgres", "json", "macros" ] }
dotenv = "0.15.0"
serde = { version = "1.0.152", features = [ "derive" ] }